add trailig \ to PSR-4

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Fykosak\\FKSDBDownloaderCore": "src/"
+      "Fykosak\\FKSDBDownloaderCore\\": "src/"
     }
   }
 }
