Rename IRequest -> Request

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "fykosak/fksdb-downloader-core",
-  "description": "",
+  "description": "Interface for downloading data from FKSDB by SOAP-client",
+  "version": "1.0.0",
   "type": "library",
   "require": {
     "php": ">=7.4",
@@ -11,6 +12,10 @@
     {
       "name": "Michal Mišo Červeňák",
       "email": "miso@fykos.cz"
+    },
+    {
+      "name": "fykos.cz",
+      "email": "webmaster@fykos.cz"
     }
   ],
   "autoload": {
