--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Interface for downloading data from FKSDB by SOAP-client",
   "version": "1.0.0",
   "type": "library",
+  "license": "GPL-3.0-or-later",
   "require": {
     "php": ">=7.4",
     "ext-dom": "*",
