--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
   "name": "fykosak/fksdb-downloader-core",
   "description": "Interface for downloading data from FKSDB by SOAP-client",
-  "version": "1.0.1",
   "type": "library",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": ">=7.4",
+    "php": "7.4.*",
     "ext-dom": "*",
     "ext-soap": "*"
   },
