--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": "7.4.*",
+    "php": ">= 7.4",
     "ext-dom": "*",
     "ext-soap": "*"
   },
