--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
     "ext-dom": "*",
     "ext-soap": "*"
   },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.6.0"
+  },
+  "scripts": {
+    "testPSR": "php -e vendor/squizlabs/php_codesniffer/bin/phpcs --standard=PSR12 src/"
+  },
   "authors": [
     {
       "name": "fykos.cz",
