--- a/.github/workflows/php-psr.yml
+++ b/.github/workflows/php-psr.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   test:
-    name: PHP 7.4
+    name: default with ${{ matrix.php }}
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
