--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "require": {
     "php": ">= 7.4",
     "ext-dom": "*",
-    "ext-soap": "*"
+    "ext-soap": "*",
+    "justinrainbow/json-schema": "5.2.12"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0"
